# cold-email-workflow

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml
.claude/: settings.local.json
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: seed_db.py  test_run.py
src/: config.py  db.py  graph.py  models.py  state.py  update_semantic.py
src/eval/: rubric.py
src/memory/: episodic.py  procedural.py  seed.py  semantic.py  store.py
src/memory/seeds/: procedural_initial.md
src/nodes/: dedupe_check.py  draft_email.py  evaluate.py  extract_hooks.py  find_contact.py  gather_signals.py  human_review.py  intake.py  load_memory.py  persist_episodic.py  qualify_company.py  reflect_on_failure.py
src/tools/: firecrawl.py  llm_factory.py  proxycurl.py
tests/: conftest.py  test_db.py  test_graph.py  test_models.py
tests/eval/: test_rubric.py
tests/memory/: test_episodic.py  test_procedural.py  test_semantic.py
tests/nodes/: test_draft_email.py  test_evaluate.py  test_intake.py  test_qualify_company.py
tests/tools/: test_firecrawl.py  test_llm_factory.py  test_proxycurl.py
